data/derived/comb/progs/unify/prog7993.ml.out
Characters 562-602:
  (eval(expr1, x, y) ** (abs(eval(expr2, x, y) +. eval(expr3, x, y))));;
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
